--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,9 +8,9 @@
   <% @posts.each do |post| %>
     <%= render post %>
     <p>
-      <%= link_to "Show this post", post %>
+      <%= link_to "Muestra este Post", post %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<%= link_to "Nuevo Post", new_post_path %>
